# pyrevolut

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: bumpversion.yml  publish.yml  publish_docs.yml  publish_pypi.yml  test_integration.yml
code_reference/api/accounts/asynchronous/: index.html
code_reference/api/accounts/pydantic/: index.html
code_reference/api/accounts/synchronous/: index.html
code_reference/api/cards/asynchronous/: index.html
code_reference/api/cards/pydantic/: index.html
code_reference/api/cards/synchronous/: index.html
code_reference/api/common/: index.html
code_reference/api/counterparties/asynchronous/: index.html
code_reference/api/counterparties/pydantic/: index.html
code_reference/api/counterparties/synchronous/: index.html
code_reference/api/foreign_exchange/asynchronous/: index.html
code_reference/api/foreign_exchange/pydantic/: index.html
code_reference/api/foreign_exchange/synchronous/: index.html
code_reference/api/payment_drafts/asynchronous/: index.html
code_reference/api/payment_drafts/pydantic/: index.html
code_reference/api/payment_drafts/synchronous/: index.html
code_reference/api/payout_links/asynchronous/: index.html
code_reference/api/payout_links/pydantic/: index.html
code_reference/api/payout_links/synchronous/: index.html
code_reference/api/simulations/asynchronous/: index.html
code_reference/api/simulations/pydantic/: index.html
code_reference/api/simulations/synchronous/: index.html
code_reference/api/team_members/asynchronous/: index.html
code_reference/api/team_members/pydantic/: index.html
code_reference/api/team_members/synchronous/: index.html
code_reference/api/transactions/asynchronous/: index.html
code_reference/api/transactions/pydantic/: index.html
code_reference/api/transactions/synchronous/: index.html
code_reference/api/transfers/asynchronous/: index.html
code_reference/api/transfers/pydantic/: index.html
code_reference/api/transfers/synchronous/: index.html
code_reference/api/webhooks/asynchronous/: index.html
code_reference/api/webhooks/pydantic/: index.html
code_reference/api/webhooks/synchronous/: index.html
code_reference/exceptions/exceptions/: index.html
code_reference/http_client/asynchronous/: index.html
code_reference/http_client/base/: index.html
code_reference/http_client/synchronous/: index.html
docs/: about.md  index.md
docs/code_reference/api/: common.md
docs/code_reference/api/accounts/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/cards/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/counterparties/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/foreign_exchange/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/payment_drafts/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/payout_links/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/simulations/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/team_members/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/transactions/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/transfers/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/api/webhooks/: asynchronous.md  pydantic.md  synchronous.md
docs/code_reference/exceptions/: exceptions.md
docs/code_reference/http_client/: asynchronous.md  base.md  synchronous.md
pyrevolut/: client.py
pyrevolut/api/: __init__.py  common.py
pyrevolut/api/accounts/: __init__.py  endpoint.py  enums.py  retrieve_all_accounts.py  retrieve_an_account.py  retrieve_full_bank_details.py
pyrevolut/api/accounts/endpoint/: __init__.py  asynchronous.py  synchronous.py
pyrevolut/api/accounts/get/: __init__.py  retrieve_all_accounts.py  retrieve_an_account.py  retrieve_full_bank_details.py
pyrevolut/api/accounts/resources/: __init__.py  account.py
pyrevolut/api/cards/: __init__.py  endpoint.py
pyrevolut/api/cards/delete/: __init__.py  terminate_card.py
pyrevolut/api/cards/endpoint/: __init__.py  (+2 more)
pyrevolut/api/common/: __init__.py  endpoint.py
pyrevolut/api/counterparties/: __init__.py  endpoint.py
pyrevolut/api/foreign_exchange/: __init__.py  endpoint.py
pyrevolut/api/payment_drafts/: __init__.py  endpoint.py
pyrevolut/api/payout_links/: __init__.py  endpoint.py
pyrevolut/api/simulations/: __init__.py  endpoint.py
pyrevolut/api/team_members/: __init__.py  endpoint.py
pyrevolut/api/transactions/: __init__.py  endpoint.py
pyrevolut/api/transfers/: __init__.py  endpoint.py
pyrevolut/api/webhooks/: __init__.py  endpoint.py
pyrevolut/cli/: __init__.py  __main__.py  main.py
pyrevolut/client/: __init__.py  asynchronous.py  base.py  synchronous.py
pyrevolut/exceptions/: __init__.py  bad_request.py  common.py  conflict.py  forbidden.py  internal_revolut_error.py  internal_server_error.py  invalid_environment.py  invalid_payload.py  method_not_allowed.py  network_error.py  not_acceptable.py  not_found.py  server_unavailable.py  timeout_error.py  too_many_requests.py  unauthorized.py
pyrevolut/utils/: __init__.py  concurrency.py  date.py  datetime.py
pyrevolut/utils/auth/: __init__.py  auth_auto.py  auth_manual.py  create_client_assert_jwt.py  creds.py  enum_auth_scope.py  gen_public_private_cert.py  get_auth_tokens.py  refresh_access_token.py
scripts/: publish.sh  publish_docs.sh  publish_pkg.sh  setup_deps.sh  setup_dev.sh
scripts/os/: setup_deps_linux.sh  setup_deps_macos.sh  setup_deps_windows.ps1
search/: search_index.json
tests/: conftest.py  test_accounts.py  test_card.py  test_client.py  test_counterparties.py  test_foreign_exchange.py  test_payment_drafts.py  test_payout_links.py  test_simulations.py  test_team_members.py  test_transactions.py  test_transfers.py  test_webhooks.py
tests/app/: __init__.py  app.py
tests/credentials/: README.md
(+137 files in other folders)
